test/negative/struct_wrong_args.mut
# ERROR: wrong number of arguments to struct constructor
struct Point
    x: i64
    y: i64
end

p := Point(1, 2, 3)
